Fix element alignements (#6919)
* fix(TicketMessages/Header): adjust sender and channel infos

* fix(form): align checkboxes with labels

--- a/src/pages/tickets/detail/components/TicketMessages/Header.less
+++ b/src/pages/tickets/detail/components/TicketMessages/Header.less
@@ -17,6 +17,7 @@
     display: flex;
     min-width: 200px;
     align-items: center;
+    align-self: start;
 
     & > * {
       margin-right: 6px;
