--- a/src/pages/tickets/detail/components/TicketMessages/Source.less
+++ b/src/pages/tickets/detail/components/TicketMessages/Source.less
@@ -4,6 +4,7 @@
   transition: all .2s linear;
 
   color: @lightPurple2;
+  display: flex;
 
   &:hover {
     color: @purple;
